--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.0-0",
+    "vue-star-rating": "^2.1.0",
     "vuex": "^4.0.0-0",
     "vuex-module-decorators": "^1.0.1",
     "yup": "^0.32.9"
