--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "@vee-validate/i18n": "^4.1.20",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
@@ -23,6 +24,7 @@
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.0-0",
+    "vue-star-rating": "^2.1.0",
     "vuex": "^4.0.0-0",
     "vuex-module-decorators": "^1.0.1",
     "yup": "^0.32.9"
