pagination + product detail

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
-, "src/modules/catalog/components/Catalog/CatalogBreadcrumb.vue", "src/modules/catalog/layouts/AppContact.vue", "src/modules/catalog/layouts/AppHeader.vue", "src/modules/catalog/components/Catalog/ProductFilter.vue", "src/modules/catalog/components/Catalog/BodyContent.vue", "src/modules/catalog/components/Catalog/TopFilterSelect.vue", "src/modules/catalog/components/Catalog/SideFilter.vue", "src/modules/catalog/pages/MainPage.vue"  ],
+    "tests/**/*.tsx",
+     "src/modules/catalog/layouts/AppContact.vue", "src/modules/catalog/layouts/AppHeader.vue", "src/modules/catalog/pages/MainPage.vue"  ],
   "exclude": [
     "node_modules"
   ]
